src/content/docs/ko/sdk/ios/v4/features/events.mdx
---
title: "이벤트 정보 전송"
description: "이 메서드를 사용하여 이벤트 정보를 Adjust로 전송합니다."
slug: "en/sdk/ios/v4/features/events"
versions: 
    - 
        label: "v5"
        value: "v5"
        default: true
    - 
        label: "v4"
        value: "v4"
redirects: 
    v5: "/en/sdk/ios/features/events"
---
Adjust SDK가 제공하는 `ADJEvent` 객체는 이벤트 정보를 구성하고 이러한 정보를 앱에서 Adjust 서버로 전송하는 데 사용할 수 있습니다.

ADJEvent 객체 인스턴스화 \{\#instantiate\-an\-adjevent\-object\}
---------------------------------------------------------------

<codeblock title="메서드 서명"> 

```objc
+ (nullable ADJEvent *)eventWithEventToken:(nonnull NSString *)eventToken;
```

</CodeBlock> 

Adjust SDK를 사용하여 이벤트 정보를 전송하려면 `ADJEvent` 객체를 인스턴스화해야 합니다. 이 객체에는 앱에서 이벤트가 발생할 때 Adjust로 전송되는 변수가 포함됩니다.

이벤트 객체를 인스턴스화하려면 새로운 `ADJEvent` 인스턴스를 생성하고 다음 파라미터를 전달합니다.

* `eventToken` \(`NSString`\): Adjust [이벤트 토큰](https://help.adjust.com/en/article/add-events#manage-your-events)

<tabs> <tab title="Swift" sync="swift"> 

```swift
let event = ADJEvent(eventToken: "abc123")
Adjust.trackEvent(event)
```

</Tab> <tab title="Objective-C" sync="objc"> 

```objc
ADJEvent *event = [ADJEvent eventWithEventToken:@"abc123"];
[Adjust trackEvent:event];
```

</Tab> <tab title="Javascript" sync="js"> 

```js
var adjustEvent = new AdjustEvent("abc123");
Adjust.trackEvent(adjustEvent);
```

</Tab> </Tabs> 

이벤트 전송 \{\#send\-an\-event\}
---------------------------------

<codeblock title="메서드 서명"> 

```objc
+ (void)trackEvent:(nullable ADJEvent *)event;
```

</CodeBlock> 

[Adjust 이벤트 토큰](https://help.adjust.com/en/article/add-events#add-event)을 연결하여 앱의 이벤트를 기록할 수 있습니다. 이벤트 기록 방법:

* 새 Adjust 이벤트 인스턴스를 만들고 이벤트 토큰을 문자열 인수로 전달합니다.
* 이벤트 인스턴스를 인수로 `trackEvent` 메서드를 호출합니다.

<tabs> <tab title="Swift" sync="swift"> 

```swift
let event = ADJEvent(eventToken: "abc123")
Adjust.trackEvent(event)
```

</Tab> <tab title="Objective-C" sync="objc"> 

```objc
ADJEvent *event = [ADJEvent eventWithEventToken:@"abc123"];
[Adjust trackEvent:event];
```

</Tab> <tab title="Javascript" sync="js"> 

```js
var adjustEvent = new AdjustEvent("abc123");
Adjust.trackEvent(adjustEvent);
```

</Tab> </Tabs> 

### 예 \{\#example\}

본 예시에서는 사용자가 버튼을 조작할 때마다 `g3mfiw`라는 토큰으로 이벤트를 기록하는 방법을 보여줍니다.
<tabs> <tab title="Swift" sync="swift"> 

```swift
import Adjust
import UIKit

class ViewControllerSwift: UIViewController {
   @IBOutlet weak var btnRecordEventSimple: UIButton?

   @IBAction func btnRecordEventSimple(_sender: UIButton) {
      let event = ADJEvent(eventToken: "g3mfiw");
      Adjust.trackEvent(event);
   }
}
```

</Tab> <tab title="Objective-C" sync="objc"> 

```objc
#import "Adjust.h"
#import "Constants.h"
#import "ViewControllerObjC.h"

@interface ViewControllerObjC ()

@property (weak, nonatomic) IBOutlet UIButton *btnRecordDeduplicatedEvent;

@end

@implementation ViewControllerObjC

- (IBAction)clickRecordSimpleEvent:(UIButton *)sender {
    ADJEvent *event = [ADJEvent eventWithEventToken: @"g3mfiw"];

    [Adjust trackEvent:event];
}

@end
```

</Tab> <tab title="Javascript" sync="js"> 

```html
<html id="sl-md0000000">
   <body id="sl-md0000000">
      <script id="sl-md0000000">
         setupWebViewJavascriptBridge(function(bridge) {
            let adjustConfig = new AdjustConfig('2fm9gkqubvpc', AdjustConfig.EnvironmentSandbox);
            adjustConfig.setLogLevel(AdjustConfig.LogLevelVerbose);

            Adjust.appDidLaunch(adjustConfig);

            var btnRecordDeduplicatedEvent = document.getElementById('btnRecordDeduplicatedEvent')
            btnRecordDeduplicatedEvent.onclick = function(e) {
                  e.preventDefault()
                  var adjustEvent = new AdjustEvent('g3mfiw')
                  Adjust.trackEvent(adjustEvent)
            }
         }
      </script>
      <div id="sl-md0000000 buttons">
         <div style="width:300px;height:35px;text-align:center;" id="sl-md0000000">
            <button id="sl-md0000000 btnRecordDeduplicatedEvent">Record simple event</button>
         </div>
      </div>
   </body>
</html>
```

</Tab> </Tabs> <codeblock title="이벤트 로그" collapse="6-40"> 

```txt
Path:      /event
ClientSdk: ios$IOS_V4_VERSION
Parameters:
  app_token        2fm9gkqubvpc
  app_version      1.0
  attribution_deeplink 1
  callback_params  {"key":"value","foo":"bar"}
  connectivity_type 1
  country          US
  cpu_type         arm64-v8a
  created_at       2024-01-25T14:13:16.151Z+0100
  currency         EUR
  device_manufacturer Apple
  device_type      phone
  display_height   2205
  display_width    1080
  environment      sandbox
  event_buffering_enabled 0
  event_count      3
  event_token      g3mfiw
  hardware_name    UE1A.230829.036
  language         en
  mcc              310
  mnc              260
  needs_response_details 1
  os_build         UE1A.230829.036
  os_name          ios
  os_version       14
  package_name     com.adjust.examples
  partner_params   {"key":"value","foo":"bar"}
  revenue          0.25
  screen_density   high
  screen_format    long
  screen_size      normal
  session_count    2
  session_length   23
  subsession_count 1
  time_spent       23
  tracking_enabled 1
  ui_mode          1

```

</CodeBlock> 

매출 이벤트 기록 \{\#record\-event\-revenue\}
-------------------------------------------

<codeblock title="메서드 서명"> 

```objc
- (void)setRevenue:(double)amount currency:(nonnull NSString *)currency;
```

</CodeBlock> 

이벤트 인스턴스에서 매출 및 통화 속성을 설정하여 이벤트 관련 매출을 기록할 수 있습니다. 이 기능을 사용하여 앱 내에서 매출을 발생시키는 행동을 측정하시기 바랍니다.

이러한 속성을 설정하려면 `setRevenue` 메서드를 호출하고 다음 인수를 전달합니다.

* `revenue` \(`double`\): 해당 이벤트에 의해 창출된 매출 금액
* `currency` \(`NSString`\): 이벤트 통화의 [ISO 4217 코드](https://www.iban.com/currency-codes)

<callout type="seealso"> 

자세한 정보는 Adjust의 [여러 통화로 구매 기록](https://help.adjust.com/en/article/currency-conversion) 가이드를 참조하시기 바랍니다.
</Callout> <tabs> <tab title="Swift" sync="swift"> 

```swift
let event = ADJEvent(eventToken: "abc123")
event?.setRevenue(0.01, currency: "EUR")
Adjust.trackEvent(event)
```

</Tab> <tab title="Objective-C" sync="objc"> 

```objc
ADJEvent *event = [ADJEvent eventWithEventToken:@"abc123"];
[event setRevenue:0.01 currency:@"EUR"];
[Adjust trackEvent:event];
```

</Tab> <tab title="Javascript" sync="js"> 

```js
var adjustEvent = new AdjustEvent(eventToken);
adjustEvent.setRevenue(0.01, "EUR");
Adjust.trackEvent(adjustEvent);
```

</Tab> </Tabs> 

### 예 \{\#example\-1\}

본 예시에서는 사용자가 버튼을 조작할 때마다 `g3mfiw`라는 토큰으로 이벤트를 기록하는 방법을 보여줍니다. 이 함수는 이벤트의 `revenue` 속성을 *`0.25`* , `currency` 속성을 *`EUR`* 로 설정합니다.
<tabs> <tab title="Swift" sync="swift"> 

```swift
import Adjust
import UIKit

class ViewControllerSwift: UIViewController {
   @IBOutlet weak var btnRecordEventRevenue: UIButton?

   @IBAction func btnRecordEventRevenue(_sender: UIButton) {
      let event = ADJEvent(eventToken: "g3mfiw");
      event?.setRevenue(0.25, currency: "EUR");
      Adjust.trackEvent(event);
   }
}
```

</Tab> <tab sync="objc" title="Objective-C"> 

```objc
#import "Adjust.h"
#import "Constants.h"
#import "ViewControllerObjC.h"

@interface ViewControllerObjC ()

@property (weak, nonatomic) IBOutlet UIButton *btnRecordRevenueEvent;

@end

@implementation ViewControllerObjC

- (IBAction)clickRecordRevenueEvent:(UIButton *)sender {
   ADJEvent *event = [ADJEvent eventWithEventToken:@"g3mfiw"];
   [event setRevenue:0.25 currency:@"EUR"];
   [Adjust trackEvent:event];
}

@end
```

</Tab> <tab title="Javascript" sync="js"> 

```html
<html id="sl-md0000000">
   <body id="sl-md0000000">
      <script id="sl-md0000000">
         setupWebViewJavascriptBridge(function(bridge) {
            let adjustConfig = new AdjustConfig('2fm9gkqubvpc', AdjustConfig.EnvironmentSandbox);
            adjustConfig.setLogLevel(AdjustConfig.LogLevelVerbose);

            Adjust.appDidLaunch(adjustConfig);

            var btnRecordRevenueEvent = document.getElementById('btnRecordRevenueEvent')
            btnRecordRevenueEvent.onclick = function(e) {
                  e.preventDefault()
                  var adjustEvent = new AdjustEvent('g3mfiw')
                  adjustEvent.setRevenue(0.25, 'EUR')
                  Adjust.trackEvent(adjustEvent)
            }
         }
      </script>
      <div id="sl-md0000000 buttons">
         <div style="width:300px;height:35px;text-align:center;" id="sl-md0000000">
            <button id="sl-md0000000 btnRecordRevenueEvent">Record revenue event</button>
         </div>
      </div>
   </body>
</html>
```

</Tab> </Tabs> <codeblock title="이벤트 로그" highlight="{range: 7}"> 

```txt
Path:      /event
ClientSdk: ios$IOS_V4_VERSION
Parameters:
  environment      sandbox
  event_count      3
  event_token      abc123
  currency         EUR
  revenue          0.25
```

</CodeBlock> 

매출 이벤트 중복 제거 \{\#deduplicate\-revenue\-events\}
----------------------------------------------------

<codeblock title="메서드 서명"> 

```objc
- (void)setTransactionId:(nonnull NSString *)transactionId;
```

</CodeBlock> 

중복 이벤트 기록을 방지하기 위해 선택적 ID를 전달할 수 있습니다. SDK는 최근순으로 10개의 ID를 저장하고, 중복된 트랜잭션 ID가 있는 매출 이벤트를 건너뜁니다.

식별자를 설정하려면 트랜잭션 ID를 이벤트 인스턴스의 `setTransactionId` 속성에 할당합니다.
<tabs> <tab title="Swift" sync="swift"> 

```swift
let event = ADJEvent(eventToken: "abc123")
event?.setTransactionId(transaction.transactionIdentifier)
Adjust.trackEvent(event)
```

</Tab> <tab title="Objective-C" sync="objc"> 

```objc
ADJEvent *event = [ADJEvent eventWithEventToken:@"abc123"];
[event setTransactionId:transaction.transactionIdentifier];
[Adjust trackEvent:event];
```

</Tab> <tab title="Javascript" sync="js"> 

```js
var adjustEvent = new AdjustEvent(eventToken);
adjustEvent.setTransactionId(orderId);
Adjust.trackEvent(adjustEvent);
```

</Tab> </Tabs> 

### 예 \{\#example\-2\}

본 예시에서는 사용자가 버튼을 조작할 때마다 `g3mfiw`라는 토큰으로 이벤트를 기록하는 방법을 보여줍니다. 이 함수는 `setTransactionId` 메서드를 사용하여 `uniqueId`를 `5e85484b-1ebc-4141-aab7-25b869e54c49`로 설정합니다.
<tabs> <tab title="Swift" sync="swift"> 

```swift
import Adjust
import UIKit

class ViewControllerSwift: UIViewController {
   @IBOutlet weak var btnRecordEventSimple: UIButton?

   @IBAction func btnRecordEventSimple(_sender: UIButton) {
      let event = ADJEvent(eventToken: "g3mfiw");
      event.setTransactionId("5e85484b-1ebc-4141-aab7-25b869e54c49")
      Adjust.trackEvent(event);
   }
}
```

</Tab> <tab title="Objective-C" sync="objc"> 

```objc
#import "Adjust.h"
#import "Constants.h"
#import "ViewControllerObjC.h"

@interface ViewControllerObjC ()

@property (weak, nonatomic) IBOutlet UIButton *btnRecordDeduplicatedEvent;

@end

@implementation ViewControllerObjC

- (IBAction)clickRecordSimpleEvent:(UIButton *)sender {
    ADJEvent *event = [ADJEvent eventWithEventToken: @"g3mfiw"];
    [event setTransactionId: @"5e85484b-1ebc-4141-aab7-25b869e54c49"]
    [Adjust trackEvent:event];
}

@end
```

</Tab> <tab title="Javascript" sync="js"> 

```html
<html id="sl-md0000000">
   <body id="sl-md0000000">
      <script id="sl-md0000000">
         setupWebViewJavascriptBridge(function(bridge) {
            let adjustConfig = new AdjustConfig('2fm9gkqubvpc', AdjustConfig.EnvironmentSandbox);
            adjustConfig.setLogLevel(AdjustConfig.LogLevelVerbose);

            Adjust.appDidLaunch(adjustConfig);

            var btnRecordDeduplicatedEvent = document.getElementById('btnRecordDeduplicatedEvent')
            btnRecordDeduplicatedEvent.onclick = function(e) {
                  e.preventDefault()
                  var adjustEvent = new AdjustEvent('g3mfiw')
                  adjustEvent.setTransactionId("5e85484b-1ebc-4141-aab7-25b869e54c49")
                  Adjust.trackEvent(adjustEvent)
            }
         }
      </script>
      <div id="sl-md0000000 buttons">
         <div style="width:300px;height:35px;text-align:center;" id="sl-md0000000">
            <button id="sl-md0000000 btnRecordDeduplicatedEvent">
               Record dedupicated event
            </button>
         </div>
      </div>
   </body>
</html>
```

</Tab> </Tabs> <codeblock title="이벤트 로그" highlight="{range: 7}"> 

```txt
Path:      /event
ClientSdk: ios$IOS_V4_VERSION
Parameters:
  environment      sandbox
  event_count      3
  event_token      abc123
  transaction_id   5e85484b-1ebc-4141-aab7-25b869e54c49
```

</CodeBlock> 

콜백 파라미터 추가 \{\#add\-callback\-parameters\}
-----------------------------------------------

<codeblock title="메서드 서명"> 

```objc
- (void)addCallbackParameter:(nonnull NSString *)key value:(nonnull NSString *)value;
```

</CodeBlock> 

Adjust 대시보드에 [콜백 URL](https://help.adjust.com/en/article/set-up-callbacks)을 등록하면 SDK가 이벤트를 기록할 때 ADK가 GET 요청을 콜백 URL로 보냅니다.

서버로 보낼 콜백 파라미터를 구성할 수 있습니다. 이벤트에 대한 파라미터 구성이 완료되면 SDK는 이를 [콜백 URL](https://help.adjust.com/en/article/raw-data-exports)에 추가합니다. 해당 정보를 사용하여, BI 시스템을 통해 사용자 인앱 행동을 분석할 수 있습니다.

`NSString` 키\-값 인수와 함께 `addCallbackParameter` 메서드를 호출하여 이벤트에 콜백 파라미터를 추가합니다. 이 메서드를 여러 번 호출함으로써 여러 파라미터를 추가할 수 있습니다.
<tabs> <tab title="Swift" sync="swift"> 

```swift
let event = ADJEvent(eventToken: "abc123")
event?.addCallbackParameter("key", value: "value")
event?.addCallbackParameter("foo", value: "bar")
Adjust.trackEvent(event)
```

</Tab> <tab title="Objective-C" sync="objc"> 

```objc
ADJEvent *event = [ADJEvent eventWithEventToken:@"abc123"];
[event addCallbackParameter:@"key" value:@"value"];
[event addCallbackParameter:@"foo" value:@"bar"];
[Adjust trackEvent:event];
```

</Tab> <tab title="Javascript" sync="js"> 

```js
var adjustEvent = new AdjustEvent(eventToken);
adjustEvent.addCallbackParameter("key", "value");
adjustEvent.addCallbackParameter("foo", "bar");
Adjust.trackEvent(adjustEvent);
```

</Tab> </Tabs> 

Adjust SDK는 이벤트를 측정하고 콜백 파라미터가 추가된 URL로 요청을 전송합니다. 예를 들어 URL `https://www.mydomain.com/callback`을 등록한 경우 콜백은 다음과 같습니다.

```http
https://www.mydomain.com/callback?key=value&foo=bar
```

<callout type="note"> 

Adjust는 사용자의 커스텀 콜백 파라미터를 보관하지 않습니다. 커스텀 파라미터는 콜백 URL에만 추가됩니다.
</Callout> 

CSV 업로드를 사용하는 경우, 반드시 CSV 정의에 파라미터를 추가하시기 바랍니다.

Adjust는 SDK에서 URL로 정보를 전송하는 데 사용할 수 있는 다양한 플레이스홀더를 지원합니다. 예를 들어, iOS의 경우 `{idfa}` 플레이스홀더, Android의 경우 `{gps_adid}` 플레이스홀더입니다. `{publisher_parameter}` 플레이스홀더는 단일 문자열의 모든 콜백 파라미터를 나타냅니다.
<callout type="seealso"> 

Adjust [콜백 가이드](https://help.adjust.com/en/article/callbacks)에서 사용 가능한 값의 전체 목록을 비롯하여 URL 콜백을 사용하는 방법을 자세히 알아보실 수 있습니다.
</Callout> 

### 예 \{\#example\-3\}

본 예시에서는 사용자가 버튼을 조작할 때마다 `g3mfiw`라는 토큰으로 이벤트를 기록하는 방법을 보여줍니다. 다음 콜백 파라미터가 추가됩니다.

* 다양한 `event_token`
* 이벤트별로 생성되는 `revenue_amount`

콜백 URL의 결과는 다음과 같습니다.

```http
http://www.mydomain.com/callback?event_token=g3mfiw&revenue_amount=0.05
```

<tabs> <tab title="Swift" sync="swift"> 

```swift
import Adjust
import UIKit

class ViewControllerSwift: UIViewController {
   @IBOutlet weak var btnRecordEventCallbacks: UIButton?

   @IBAction func btnRecordEventCallbacks(_sender: UIButton) {
      let event = ADJEvent(eventToken: "g3mfiw");
      event?.addCallbackParameter("event_token", value: "g3mfiw")
      event?.addCallbackParameter("revenue_amount", value: "0.05")
      Adjust.trackEvent(event);
   }
}
```

</Tab> <tab title="Objective-C" sync="objc"> <codeblock title="ViewControllerObjC.m"> 

```objc
#import "Adjust.h"
#import "Constants.h"
#import "ViewControllerObjC.h"

@interface ViewControllerObjC ()

@property (weak, nonatomic) IBOutlet UIButton *btnRecordCallbackEvent;

@end

@implementation ViewControllerObjC

- (IBAction)clickRecordCallbackEvent:(UIButton *)sender {
   ADJEvent *event = [ADJEvent eventWithEventToken:@"g3mfiw"];
   [event addCallbackParameter:@"event_token" value:@"g3mfiw"];
   [event addCallbackParameter:@"revenue_amount" value:@"0.05"];
   [Adjust trackEvent:event];
}

@end
```

</CodeBlock> </Tab> <tab title="Javascript" sync="js"> 

```html
<html id="sl-md0000000">
   <body id="sl-md0000000">
      <script id="sl-md0000000">
         setupWebViewJavascriptBridge(function(bridge) {
            let adjustConfig = new AdjustConfig('2fm9gkqubvpc', AdjustConfig.EnvironmentSandbox);
            adjustConfig.setLogLevel(AdjustConfig.LogLevelVerbose);

            Adjust.appDidLaunch(adjustConfig);

            var btnRecordCallbackEvent = document.getElementById('btnRecordCallbackEvent')
            btnRecordCallbackEvent.onclick = function(e) {
                  e.preventDefault()
                  var adjustEvent = new AdjustEvent('g3mfiw');
                  adjustEvent.addCallbackParameter('event_token', 'g3mfiw');
                  adjustEvent.addCallbackParameter('revenue_amount', '0.05');
                  Adjust.trackEvent(adjustEvent);
            }
         }
      </script>
      <div id="sl-md0000000 buttons">
         <div style="width:300px;height:35px;text-align:center;" id="sl-md0000000">
            <button id="sl-md0000000 btnRecordCallbackEvent">
               Record event with callback parameters
            </button>
         </div>
      </div>
   </body>
</html>
```

</Tab> </Tabs> <codeblock title="이벤트 로그"> 

```txt
Path:      /event
ClientSdk: ios$IOS_V4_VERSION
Parameters:
  callback_params  {"event_token":"g3mfiw","revenue_amount":"0.05"}
  environment      sandbox
  event_count      1
  event_token      g3mfiw

```

</CodeBlock> 

파트너 파라미터 추가 \{\#add\-partner\-parameters\}
-----------------------------------------------

<codeblock title="메서드 서명"> 

```objc
- (void)addPartnerParameter:(nonnull NSString *)key value:(nonnull NSString *)value;
```

</CodeBlock> 

[파트너 파라미터](https://help.adjust.com/en/article/data-sharing-ad-network#map-parameters)를 추가하여 네트워크 파트너에게 추가 정보를 전송할 수 있습니다.

Adjust는 설정한 [외부 파트너](https://help.adjust.com/en/article/integrated-partners)에게 파트너 파라미터를 전송합니다. 이러한 정보는 보다 세분화된 분석과 리타겟팅에 유용할 것입니다. 파트너에 대해 파라미터를 설정하고 활성화하면 Adjust 서버는 해당 파라미터를 포워드 합니다.
<callout type="note"> 

파트너 파라미터는 기본 설정에 따라 로 데이터에 나타나지 않습니다. `{partner_parameters}` 플레이스홀더를 추가하여 단일 문자열로 수신할 수 있습니다.
</Callout> 

`NSString` 키\-값 인수와 함께 `addPartnerParameter` 메서드를 호출하여 이벤트에 파트너 파라미터를 추가합니다. 이 메서드를 여러 번 호출함으로써 여러 파라미터를 추가할 수 있습니다.
<tabs> <tab title="Swift" sync="swift"> 

```swift
let event = ADJEvent(eventToken: "abc123")
event?.addPartnerParameter("key", value: "value")
event?.addPartnerParameter("foo", value: "bar")
Adjust.trackEvent(event)
```

</Tab> <tab title="Objective-C" sync="objc"> 

```objc
ADJEvent *event = [ADJEvent eventWithEventToken:@"abc123"];
[event addPartnerParameter:@"key" value:@"value"];
[event addPartnerParameter:@"foo" value:@"bar"];
[Adjust trackEvent:event];
```

</Tab> <tab title="Javascript" sync="js"> 

```js
var adjustEvent = new AdjustEvent(eventToken);
adjustEvent.addPartnerParameter("key", "value");
adjustEvent.addPartnerParameter("foo", "bar");
Adjust.trackEvent(adjustEvent);
```

</Tab> </Tabs> 

### 예 \{\#example\-4\}

본 예시에서는 사용자가 버튼을 조작할 때마다 `g3mfiw`라는 토큰으로 이벤트를 기록하는 방법을 보여줍니다. 다음 파트너 파라미터가 추가됩니다.

* 관련 제품의 `product_id`
* 이벤트를 트리거한 사용자의 `user_id`

<tabs> <tab title="Swift" sync="swift"> 

```swift
import Adjust
import UIKit

class ViewControllerSwift: UIViewController {
   @IBOutlet weak var btnRecordEventPartnerParams: UIButton?

   @IBAction func btnRecordEventPartnerParams(_sender: UIButton) {
      let event = ADJEvent(eventToken: "g3mfiw");
      event?.addPartnerParameter("product_id", value: "29")
      event?.addPartnerParameter("user_id", value: "835")
      Adjust.trackEvent(event);
   }
}
```

</Tab> <tab title="Objective-C" sync="objc"> 

```objc
#import "Adjust.h"
#import "Constants.h"
#import "ViewControllerObjC.h"

@interface ViewControllerObjC ()

@property (weak, nonatomic) IBOutlet UIButton *btnRecordPartnerParamsEvent;

@end

@implementation ViewControllerObjC

- (IBAction)clickRecordPartnerParamsEvent:(UIButton *)sender {
   ADJEvent *event = [ADJEvent eventWithEventToken:@"g3mfiw"];
   [event addPartnerParameter:@"product_id" value:@"29"];
   [event addPartnerParameter:@"user_id" value:@"835"];
   [Adjust trackEvent:event];
}

@end
```

</Tab> <tab title="Javascript" sync="js"> 

```html
<html id="sl-md0000000">
   <body id="sl-md0000000">
      <script id="sl-md0000000">
         setupWebViewJavascriptBridge(function(bridge) {
            let adjustConfig = new AdjustConfig('2fm9gkqubvpc', AdjustConfig.EnvironmentSandbox);
            adjustConfig.setLogLevel(AdjustConfig.LogLevelVerbose);

            Adjust.appDidLaunch(adjustConfig);

            var btnRecordPartnerParamsEvent = document.getElementById('btnRecordPartnerParamsEvent')
            btnRecordPartnerParamsEvent.onclick = function(e) {
                  e.preventDefault()
                  var adjustEvent = new AdjustEvent('g3mfiw');
                  adjustEvent.addPartnerParameter('product_id', '29');
                  adjustEvent.addPartnerParameter('user_id', '835');
                  Adjust.trackEvent(adjustEvent);
            }
         }
      </script>
      <div id="sl-md0000000 buttons">
         <div style="width:300px;height:35px;text-align:center;" id="sl-md0000000">
            <button id="sl-md0000000 btnRecordPartnerParamsEvent">
               Record event with partner parameters
            </button>
         </div>
      </div>
   </body>
</html>
```

</Tab> </Tabs> <codeblock title="이벤트 로그" highlight="{range: 4}"> 

```txt
Path:      /event
ClientSdk: ios$IOS_V4_VERSION
Parameters:
  partner_params  {"product_id":"29","user_id":"835"}
  environment      sandbox
  event_count      1
  event_token      g3mfiw
```

</CodeBlock> 

콜백 ID 추가 \{\#add\-a\-callback\-identifier\}
-------------------------------------------------

<codeblock title="메서드 서명"> 

```objc
- (void)setCallbackId:(nonnull NSString *)callbackId;
```

</CodeBlock> 

트래킹하려는 각 이벤트에 커스텀 문자열 ID를 추가할 수도 있습니다. Adjust 서버는 이벤트 콜백에서 이러한 식별자를 보고합니다. 이를 통해 성공적으로 트래킹된 이벤트 확인이 가능합니다.

ID를 `NSString` 인수로 한 `setCallbackId` 메서드를 호출하여 이 ID를 설정할 수 있습니다.
<tabs> <tab title="Swift" sync="swift"> 

```swift
let event = ADJEvent(eventToken: "abc123")
event?.setCallbackId("Your-Custom-ID")
Adjust.trackEvent(event)
```

</Tab> <tab title="Objective-C" sync="objc"> 

```objc
ADJEvent *event = [ADJEvent eventWithEventToken:@"abc123"];
[event setCallbackId:@"Your-Custom-ID"];
[Adjust trackEvent:event];
```

</Tab> <tab title="Javascript" sync="js"> 

```js
var adjustEvent = new AdjustEvent("abc123");
adjustEvent.setCallbackId("Your-Custom-ID");
Adjust.trackEvent(adjustEvent);
```

</Tab> </Tabs> 

### 예 \{\#example\-5\}

본 예시에서는 사용자가 버튼을 조작할 때마다 `g3mfiw`라는 토큰으로 이벤트를 기록하는 방법을 보여줍니다. `callbackId`가 `f2e728d8-271b-49ab-80ea-27830a215147`로 설정되었습니다.
<tabs> <tab title="Swift" sync="swift"> 

```swift
import Adjust
import UIKit

class ViewControllerSwift: UIViewController {
   @IBOutlet weak var btnRecordEventCallbackId: UIButton?

   @IBAction func btnRecordEventCallbackId(_sender: UIButton) {
      let event = ADJEvent(eventToken: "g3mfiw");
      event?.setCallbackId("f2e728d8-271b-49ab-80ea-27830a215147")
      Adjust.trackEvent(event);
   }
}
```

</Tab> <tab title="Objective-C" sync="objc"> 

```objc
#import "Adjust.h"
#import "Constants.h"
#import "ViewControllerObjC.h"

@interface ViewControllerObjC ()

@property (weak, nonatomic) IBOutlet UIButton *btnRecordCallbackIdEvent;

@end

@implementation ViewControllerObjC

- (IBAction)clickRecordCallbackIdEvent:(UIButton *)sender {
   ADJEvent *event = [ADJEvent eventWithEventToken:@"g3mfiw"];
   [event setCallbackId:@"f2e728d8-271b-49ab-80ea-27830a215147"];
   [Adjust trackEvent:event];
}

@end
```

</Tab> <tab title="Javascript" sync="js"> 

```html
<html id="sl-md0000000">
   <body id="sl-md0000000">
      <script id="sl-md0000000">
         setupWebViewJavascriptBridge(function(bridge) {
            let adjustConfig = new AdjustConfig('2fm9gkqubvpc', AdjustConfig.EnvironmentSandbox);
            adjustConfig.setLogLevel(AdjustConfig.LogLevelVerbose);

            Adjust.appDidLaunch(adjustConfig);

            var btnRecordCallbackIdEvent = document.getElementById('btnRecordCallbackIdEvent')
            btnRecordCallbackIdEvent.onclick = function(e) {
                  e.preventDefault()
                  var adjustEvent = new AdjustEvent('g3mfiw');
                  adjustEvent.setCallbackId('f2e728d8-271b-49ab-80ea-27830a215147');
                  Adjust.trackEvent(adjustEvent);
            }
         }
      </script>
      <div id="sl-md0000000 buttons">
         <div style="width:300px;height:35px;text-align:center;" id="sl-md0000000">
            <button id="sl-md0000000 btnRecordCallbackIdEvent">
               Record event with callback ID
            </button>
         </div>
      </div>
   </body>
</html>
```

</Tab> </Tabs> <codeblock title="이벤트 로그" highlight="{range: 4}"> 

```txt
Path:      /event
ClientSdk: ios$IOS_V4_VERSION
Parameters:
  callback_id      f2e728d8-271b-49ab-80ea-27830a215147
  environment      sandbox
  event_count      1
  event_token      g3mfiw
```

</CodeBlock>

